// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for a more complicated entity 1`] = `
DomainObjectMetadata {
  "decorations": Object {
    "unique": Array [
      "upc",
    ],
    "updatable": Array [
      "colors",
      "quantity",
      "description",
    ],
  },
  "extends": "DomainEntity",
  "name": "Item",
  "properties": Object {
    "colors": DomainObjectPropertyMetadata {
      "nullable": false,
      "of": DomainObjectPropertyMetadata {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "required": true,
      "type": "ARRAY",
    },
    "description": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "price": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "NUMBER",
    },
    "upc": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
  },
}
`;

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for a simple entity 1`] = `
DomainObjectMetadata {
  "decorations": Object {
    "unique": Array [
      "gate",
    ],
    "updatable": Array [
      "operational",
      "phoneNumber",
    ],
  },
  "extends": "DomainEntity",
  "name": "LoadingDock",
  "properties": Object {
    "gateNumber": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "NUMBER",
    },
    "id": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": false,
      "type": "NUMBER",
    },
    "operational": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "BOOLEAN",
    },
    "phoneNumber": DomainObjectPropertyMetadata {
      "nullable": true,
      "required": true,
      "type": "STRING",
    },
    "uuid": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": false,
      "type": "STRING",
    },
  },
}
`;

exports[`extractDomainObjectMetadataForDeclarationInFile should be able to extract domain object metadata for simple value object 1`] = `
DomainObjectMetadata {
  "decorations": Object {
    "unique": null,
    "updatable": null,
  },
  "extends": "DomainValueObject",
  "name": "Address",
  "properties": Object {
    "city": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "postal": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "state": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "street": DomainObjectPropertyMetadata {
      "nullable": false,
      "required": true,
      "type": "STRING",
    },
    "suite": DomainObjectPropertyMetadata {
      "nullable": true,
      "required": true,
      "type": "STRING",
    },
  },
}
`;
